<resources>
    <string name="app_name">Newslatter</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="gender_label">Gender</string>
    <string name="male_radio">Male</string>
    <string name="female_radio">Female</string>
    <string name="submit">Submit</string>
    <string name="password_hint">Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="insert_title">Title</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="create_news">Create News</string>
    <string name="delete">delete</string>
</resources>
