<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name_hint" />

    <TextView
        android:id="@+id/error_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="colorRed" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="colorRed" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/male_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/male_radio" />

        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/female_radio" />
    </RadioGroup>

    <TextView
        android:id="@+id/error_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="colorRed" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />

</LinearLayout>